--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Сессионная аналитика для игр «Мир танков» и «World of Tanks». Анализ выстрелов, попаданий, урона">
   <title>WOTSTAT</title>
-  <description>Сессионная аналитика для игр «Мир танков» и «World of Tanks». Анализ выстрелов, попаданий, урона
-  </description>
 </head>
 
 <body>
