--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SCKESJJC93"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SCKESJJC93');
+  </script>
 </body>
 
 </html>
