--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Сессионная аналитика для игр «Мир танков» и «World of Tanks». Анализ выстрелов, попаданий, урона">
+    content="Мод WotStat. Сессионная аналитика для игр Мир танков и World of Tanks. Анализ выстрелов, попаданий, урона, карт">
   <title>WOTSTAT</title>
 </head>
 
